Updated the recipe of steak - created an images drectory and upload an image to it.

--- a/recipies/steak.html
+++ b/recipies/steak.html
@@ -6,10 +6,47 @@
 <head>
     <meta charset="UTF-8">
     <title>Steak</title>
+    
 </head>
 
 
 <body>
-    <h1>Steak</h1>    
+
+
+    <h1>Steak</h1>  
+
+    <img src="../images/steak.jpg" height="360" width="240" 
+    alt="A picture of a cooked steak">  
+
+    <p> Start with taking the meat at least 30 minutes before cooking 
+        out of teh fridge. Seaon the meat with just salt, you can add
+        pepper too, but nothing else. 
+    </p>
+
+    <p>After waiting an appropriate amount of time, melt the butter in 
+        a hot frying pan, as soon as the butter starts to bubble, put your
+        meat in the pan and coat the non-frying side with the melted 
+        butter. Cook as you you like your meat. After you are done, let the
+        meat stay in the pan for 5 to 10 minutes, then picked it up and enjoy.
+    </p>
+
+    <h1> Ingredients</h1>
+
+    <ul>
+        <li> Fillet Pure </li>
+        <li> Salt </li>
+        <li> Butter </li>
+        <li> Pepper (pptional) </li>
+    </ul>
+
+    <h1> Steps</h1>
+
+    <ol>
+        <li> Season the meat</li>
+        <li> Melt the butter to perfection</li>
+        <li> Fry the meat</li>
+        <li> Let it rest then enjoy </li>
+
+    </ol>
 </body>
 </html>
