Completed the sunny side-up recipe.

--- a/recipies/sunny-side-up.html
+++ b/recipies/sunny-side-up.html
@@ -10,10 +10,29 @@
 
 
 <body>
+
     <h1> Side-up </h1>
     <img src="../images/egg.jpg" alt="A photo of a fried egg" height="240"
     width="160" >
-    
+    <p> This is very simple recipe that you can cook under 10 minutes
+        and you can master just cooking it once! </p>
+
+    <head> Ingredients </head>
+    <ul>
+        <li> Oil or butter (Prefered) </li>
+        <li> Fresh Eggs </li>
+        <li>  Salt (optional) </li>
+        <li> pepper (optional) </li>
+    </ul>
+
+    <head> Steps </head>
+    <ol>
+        <li> Heat the frying pan</li>
+        <li> Melt the butte or heat the oil</li>
+        <li> crack the eggs in the pan</li>
+        <li> fry as you like it and serve.</li>
+    </ol>
+
     
 </body>
 </html>
