--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
     <body>
         <h1> Odin Recipese </h1>
-        <a href="./recipies/steak.html"> STEAK </a>
+        <ul>
+            <li> <a href="./recipies/steak.html"> STEAK </a> </li>
+            <li> <a href="./recipies/sunny-side-up.html"> Sunny Side-Up </a> </li>
+        </ul>
+        
     </body>
 
 
